maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:22: error: illegal start of simple pattern
    } else { case = 1 }
                  ^IslandMaze:22: error: '=>' expected but '}' found.
    } else { case = 1 }
                      ^