maze.island.IslandMaze.scala.code
override def run() {
  var etat: Int = 0
  while (!estSurBiscuit()) {
    etat match {
      case 0 => courrirNord()
      case 1 => suivreGauche()
      case _ => println("error")
    }
  }
  prendBiscuit()
}

def courrirNord() {
  setDirection(Direction.NORTH)
  if (!estFaceMur()) { 
    avance() 
  } else {
    gauche()
    if (!estFaceMur()) { 
      avance () 
    } else { case = 1 }
  }
}

def suivreGauche() {
  keepHandOnSideWall()
}

def keepHandOnSideWall() {
  gauche()
  if (!estFaceMur()) {
    avance()
  } else  {
    while (estFaceMur()) {
      droite()
    }
    avance()
  }
}